Tab Module Settings Cache bug workaround

--- a/App_LocalResources/MakeReservation.ascx.resx
+++ b/App_LocalResources/MakeReservation.ascx.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ReservationCancelled.Text" xml:space="preserve">
     <value>Your reservation has been cancelled.</value>
@@ -478,5 +478,8 @@ Also please include a phone number where you may be reached regarding your reser
   </data>
   <data name="viewReservationsCalendarCommandButton.Text" xml:space="preserve">
     <value>Reservations Calendar</value>
+  </data>
+  <data name="mainSettingsCommandButton.Text" xml:space="preserve">
+    <value>Main Settings</value>
   </data>
 </root>
